# VESIcal

./: .flake8  .gitignore  .readthedocs.yaml  Adrienne_HowToMELTS.ipynb  BatchTest.xlsx  DegassingPath.ipynb  Dockerfile  LICENSE  MagmaSat2018-input.xlsx  MagmaSatPlus.py  README.md  RunTests  Testing_Iacono-Marziano_et_al_2012.ipynb  VESIcal.py  VESIcal_dissolved.xlsx  VESIcal_eqfluid.xlsx  VESIcal_manuscript_text.docx  VESIcal_satPs.xlsx  anvil_server.py  batchfile.py  calibrations.py  citation.cff  codemeta.json  core.py  dpath.p  example_data.xlsx  exceptions.py  indent  isobars.p  isopleths.p  jupyter_config.json  ktest.py  mystats  nox.py  pyproject.toml  readthedocs.yml  requirements.txt  requirements.txt-2022-01-26-10-33-41  sample.py  sample_class.py  (+7 more)
Calibration/: Calibration_Datasets_Specific_Warnings.ipynb  Calibration_Plotting.ipynb  Dixon_1997_NorthArchData.xlsx  Solubility_Datasets.xlsx  Solubility_Datasets_V1.xlsx  Table_of_Calibration_Limits.xlsx  example_data_Basaltic_MI_TuckerBennet.xlsx
OtherFilesNotForManuscript/: MultiSample_SaturationPressureCalc_2020.ipynb  Statia_MI_Cooper_et_al_5.xlsx  fault_test.py  fault_test_thermoengine.py  test_degassing.py  test_degassing_V.py
VESIcal/: __init__.py  batchfile.py  batchmodel.py  calculate_classes.py  calibration_checks.py  calibrations.py  clean-init.py  core.py  fugacity_models.py  model_classes.py  sample_class.py  save_util.py  vplot.py
VESIcal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
You Tube Examples/: Andesite_MI_SatPs.xlsx  Cassidy2015_AndesiteMI_YouTubeDemo.xlsx  Introduction_Example_different_functions.ipynb  Saturation_pressure_example.ipynb
(+421 files in other folders)
